--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,18 +7,23 @@ include_directories(include)
 
 file(GLOB_RECURSE SOURCES src/*.cpp src/glad.c)
 
-file(GLOB_RECURSE HEADERS include/*.h)
-
-add_executable(Zavrsni ${SOURCES} ${HEADERS})
+add_executable(Zavrsni ${SOURCES}
+        include/mesh.h
+        include/model.h)
 
 # Platform-specific settings
 if(WIN32)
-    set(OpenGlLinkers glfw3 opengl32)
+    # Path to GLFW include and lib directories (adjust these paths accordingly)
     include_directories(path_to_glfw_include)
     link_directories(path_to_glfw_lib)
+
+    # Link GLFW and OpenGL for Windows
+    set(OpenGlLinkers glfw3 opengl32)
 elseif(UNIX AND NOT APPLE)
     find_package(OpenGL REQUIRED)
-    set(OpenGlLinkers glfw ${OPENGL_gl_LIBRARY})
+    find_package(assimp REQUIRED)
+    find_package(glfw3 REQUIRED)
+    set(OpenGlLinkers glfw ${OPENGL_gl_LIBRARY} assimp)
 endif()
 
 # Link GLFW and OpenGL
